# BookBot

./: .env.example  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  run
scripts/: backfill_descriptions.py  seed_test_book.py  telethon_login.py  telethon_setup_storage.py
src/bookbot/: __init__.py  categories.py  config.py  db.py  models.py
src/bookbot/bot/: cards.py  delivery.py  handlers.py  keyboards.py  main.py  ranking.py  search.py  states.py  textclean.py  texts.py
src/bookbot/ingest/: cli.py  gutenberg.py  librivox.py  storage.py
src/bookbot/providers/: __init__.py  ai_meta.py  base.py  metadata.py  pdf_web.py  telegram_channels.py  youtube_audio.py
supabase/migrations/: 0001_init.sql  0002_browse.sql  0003_telegram_files.sql
tests/: test_ingest.py  test_keyboards.py  test_providers.py  test_search.py  test_telegram_channels.py  test_textclean.py
