[project]
name = "bookbot"
version = "0.1.0"
description = "Open-source Telegram bot for searching and downloading public-domain books (PDF ebooks + MP3 audiobooks)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "supabase>=2.6",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
bookbot-bot = "bookbot.bot.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
